# betfair-api

./: .gitignore  LICENSE  README.md  TODO  betfair-api.cabal  stack.yaml
sample/: CompetitionName.hs  Log.hs  MarketBook.hs  Over15Lays.hs  Over15LaysMarketCatalogue.hs  Sample.hs
sample.deprecated/: Config.hs  Main.hs  ManagerSettings.hs  Over15Lays.hs
src/Betfair/: APING.hs
src/Betfair/APING/API/: APIRequest.hs  Context.hs  GetResponse.hs  Headers.hs  Log.hs  ResponseException.hs  WriterLog.hs
src/Betfair/APING/Requests/: CancelOrders.hs  KeepAlive.hs  ListMarketBook.hs  ListMarketCatalogue.hs  Login.hs  Logout.hs  PlaceOrders.hs
src/Betfair/APING/Types/: APINGException.hs  AppKey.hs  BettingException.hs  CancelExecutionReport.hs  CancelInstruction.hs  CancelInstructionReport.hs  Competition.hs  Error.hs  ErrorData.hs  Event.hs  EventType.hs  ExBestOffersOverrides.hs  ExchangePrices.hs  ExecutionReportErrorCode.hs  ExecutionReportStatus.hs  InstructionReportErrorCode.hs  InstructionReportStatus.hs  KeyLineDescription.hs  KeyLineSelection.hs  LimitOnCloseOrder.hs  LimitOrder.hs  Login.hs  MarketBettingType.hs  MarketBook.hs  MarketCatalogue.hs  MarketDescription.hs  MarketFilter.hs  MarketLineRangeInfo.hs  MarketOnCloseOrder.hs  MarketProjection.hs  MarketSort.hs  MarketStatus.hs  Match.hs  MatchProjection.hs  Order.hs  OrderProjection.hs  OrderStatus.hs  OrderType.hs  PersistenceType.hs  PlaceExecutionReport.hs  (+19 more)
src/Common/: Types.hs
src/Network/Betfair/API/: APIRequest.hs  Context.hs  GetResponse.hs  Headers.hs  ResponseException.hs  WriterLog.hs
src/Network/Betfair/Requests/: APIRequest.hs  CancelOrders.hs  Config.hs  Context.hs  GetResponse.hs  Headers.hs  KeepAlive.hs  ListMarketBook.hs  ListMarketCatalogue.hs  Login.hs  Logout.hs  ParseKeepAlive.hs  ParseLogin.hs  ParseLogout.hs  PlaceOrders.hs  WriterLog.hs
src/Network/Betfair/Types/: APINGException.hs  AppKey.hs  BettingException.hs  CancelExecutionReport.hs  CancelInstruction.hs  CancelInstructionReport.hs  Competition.hs  Error.hs  ErrorData.hs  Event.hs  EventType.hs  ExBestOffersOverrides.hs  ExchangePrices.hs  ExecutionReportErrorCode.hs  ExecutionReportStatus.hs  InstructionReportErrorCode.hs  InstructionReportStatus.hs  LimitOnCloseOrder.hs  LimitOrder.hs  Login.hs  MarketBettingType.hs  MarketBook.hs  MarketCatalogue.hs  MarketDescription.hs  MarketFilter.hs  MarketOnCloseOrder.hs  MarketProjection.hs  MarketSort.hs  MarketStatus.hs  Match.hs  MatchProjection.hs  Order.hs  OrderProjection.hs  OrderStatus.hs  OrderType.hs  PersistenceType.hs  PlaceExecutionReport.hs  PlaceInstruction.hs  PlaceInstructionReport.hs  PriceData.hs  (+14 more)
