name:                betfair-api
version:             0.2.3.1
synopsis:            betfair api-ng bindings
description:         betfair api-ng bindings
license:             MIT
license-file:        LICENSE
author:              joe
maintainer:          joe9mail@gmail.com
copyright:           Copyright (c) 2014 Joe
category:            Network
build-type:          Simple
stability:           experimental
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type:            git
    location:        https://github.com/joe9/betfair-api.git

library
  exposed-modules: Betfair.APING
                   Betfair.APING.Requests.Logout
                   Betfair.APING.Requests.ListMarketBook
                   Betfair.APING.Requests.ListMarketCatalogue
                   Betfair.APING.Requests.CancelOrders
                   Betfair.APING.Requests.PlaceOrders
                   Betfair.APING.Requests.Login
                   Betfair.APING.Requests.KeepAlive
                   Betfair.APING.API.GetResponse
                   Betfair.APING.API.Log
                   Betfair.APING.API.ResponseException
                   Betfair.APING.API.Context
                   Betfair.APING.API.Headers
                   Betfair.APING.API.APIRequest
                   Betfair.APING.Types.PersistenceType
                   Betfair.APING.Types.Order
                   Betfair.APING.Types.MarketDescription
                   Betfair.APING.Types.LimitOnCloseOrder
                   Betfair.APING.Types.ExecutionReportErrorCode
                   Betfair.APING.Types.MarketBook
                   Betfair.APING.Types.Event
                   Betfair.APING.Types.MarketFilter
                   Betfair.APING.Types.ExchangePrices
                   Betfair.APING.Types.PlaceInstructionReport
                   Betfair.APING.Types.CancelInstruction
                   Betfair.APING.Types.LimitOrder
                   Betfair.APING.Types.ResponseMarketCatalogue
                   Betfair.APING.Types.APINGException
                   Betfair.APING.Types.Runner
                   Betfair.APING.Types.ResponseMarketBook
                   Betfair.APING.Types.RunnerCatalog
                   Betfair.APING.Types.PlaceInstruction
                   Betfair.APING.Types.ExecutionReportStatus
                   Betfair.APING.Types.TimeRange
                   Betfair.APING.Types.BettingException
                   Betfair.APING.Types.MarketProjection
                   Betfair.APING.Types.PriceSize
                   Betfair.APING.Types.Error
                   Betfair.APING.Types.InstructionReportStatus
                   Betfair.APING.Types.Login
                   Betfair.APING.Types.ResponseCancelOrders
                   Betfair.APING.Types.Side
                   Betfair.APING.Types.MarketOnCloseOrder
                   Betfair.APING.Types.ErrorData
                   Betfair.APING.Types.MatchProjection
                   Betfair.APING.Types.ExBestOffersOverrides
                   Betfair.APING.Types.CancelInstructionReport
                   Betfair.APING.Types.Token
                   Betfair.APING.Types.PriceProjection
                   Betfair.APING.Types.Competition
                   Betfair.APING.Types.OrderType
                   Betfair.APING.Types.EventType
                   Betfair.APING.Types.Match
                   Betfair.APING.Types.AppKey
                   Betfair.APING.Types.RollupModel
                   Betfair.APING.Types.InstructionReportErrorCode
                   Betfair.APING.Types.PriceData
                   Betfair.APING.Types.MarketBettingType
                   Betfair.APING.Types.OrderProjection
                   Betfair.APING.Types.StartingPrices
                   Betfair.APING.Types.MarketSort
                   Betfair.APING.Types.OrderStatus
                   Betfair.APING.Types.MarketCatalogue
                   Betfair.APING.Types.ResponsePlaceOrders
                   Betfair.APING.Types.CancelExecutionReport
                   Betfair.APING.Types.MarketStatus
                   Betfair.APING.Types.PlaceExecutionReport
                   Betfair.APING.Types.RunnerStatus
  default-extensions:  NoImplicitPrelude
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings
  build-depends:       base
                     , data-default
                     , aeson
                     , bytestring
                     , http-conduit
                     , http-client >= 0.5.0
                     , http-types
                     , template-default
                     , groom
                     , MissingH
                     , basic-prelude
                     , string-conversions
                     , text
                     , safe-exceptions
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
